--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -47,11 +47,11 @@ jobs:
       - name: Configure Gradle caching
         uses: gradle/actions/setup-gradle@v3
 
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: Assemble Debug
-        run: ./gradlew :app:assembleDebug --stacktrace
+      - name: Build with Gradle 8.7 (no wrapper)
+        uses: gradle/gradle-build-action@v3
+        with:
+          gradle-version: 8.7
+          arguments: :app:assembleDebug --stacktrace
 
       - name: Upload debug APK artifact
         uses: actions/upload-artifact@v4
